# NFL_ChatBet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.example.yml
docs/: DATA_COLLECTION_PLAN.md  DATA_SOURCES.md
notebooks/: 01_exploratory_data_analysis.ipynb
scripts/: example_data_pipeline.py  train_model.py
src/: __init__.py
src/data/: __init__.py  data_processor.py  data_sources.py  nfl_data_loader.py  nfl_data_source.py
src/features/: __init__.py  feature_engineer.py
src/models/: __init__.py  base_model.py  random_forest_model.py  xgboost_model.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py
tests/unit/: test_nfl_data_loader.py
